<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.register.RegisterActivity">

        <TextView
            android:id="@+id/tv_activity_register_title"
            style="@style/TextViewHeader"
            android:text="@string/activity_register_sign_up"
            app:layout_constraintBottom_toTopOf="@id/layout_activity_register_information"
            app:layout_constraintEnd_toEndOf="@id/layout_activity_register_information"
            app:layout_constraintStart_toStartOf="@id/layout_activity_register_information"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/layout_activity_register_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btn_activity_register_next"
            app:layout_constraintEnd_toEndOf="@id/guideline_activity_register_vertical_2"
            app:layout_constraintStart_toStartOf="@id/guideline_activity_register_vertical_1"
            app:layout_constraintTop_toBottomOf="@id/tv_activity_register_title">

            <TableRow
                android:layout_marginBottom="12dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_activity_register_email"
                    style="@style/EditTextPrimary"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:hint="@string/register_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_activity_register_verify_email"
                    style="@style/ButtonAuthRegisterCheck"
                    android:text="@string/register_verifyEmail" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="12dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_activity_register_verification_code"
                    style="@style/EditTextPrimary"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:hint="@string/register_verificationCode"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_activity_register_check_verification_code"
                    style="@style/ButtonAuthRegisterCheck"
                    android:text="@string/register_checkEmailVerified" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="12dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_activity_register_id"
                    style="@style/EditTextPrimary"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:hint="@string/register_userId"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_activity_register_check_id_duplication"
                    style="@style/ButtonAuthRegisterCheck"
                    android:text="@string/register_checkUserIdDuplicate" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="12dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_activity_register_password"
                    style="@style/EditTextPrimary"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:hint="@string/register_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow android:gravity="center">

                <EditText
                    android:id="@+id/et_activity_register_password_repeat"
                    style="@style/EditTextPrimary"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:hint="@string/register_repeatPassword"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextViewAuthRegisterHint"
            android:layout_marginTop="12dp"
            android:text="@string/register_passwordFormatHint"
            app:layout_constraintEnd_toEndOf="@id/layout_activity_register_information"
            app:layout_constraintStart_toStartOf="@id/layout_activity_register_information"
            app:layout_constraintTop_toBottomOf="@id/layout_activity_register_information" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_activity_register_next"
            style="@style/ButtonPrimary"
            android:text="@string/register_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/layout_activity_register_information"
            app:layout_constraintStart_toStartOf="@id/layout_activity_register_information"
            app:layout_constraintTop_toBottomOf="@id/layout_activity_register_information" />

        <TextView
            android:id="@+id/tv_activity_register_error"
            style="@style/TextViewError"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/btn_activity_register_next"
            app:layout_constraintEnd_toEndOf="@id/btn_activity_register_next"
            app:layout_constraintStart_toStartOf="@id/btn_activity_register_next"
            tools:text="정승훈 최고." />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_register_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_activity_register_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>