<layout>

    <!-- TODO dataBinding -->

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/img_login_text_logo"
            android:layout_width="260dp"
            android:layout_height="112dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="148dp"
            android:src="@drawable/initial_login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_login_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_login_email"
                style="@style/Widget.EditText.Primary"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_login_password"
                style="@style/Widget.EditText.Primary"
                android:hint="@string/login_password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.Button.Primary"
                android:text="@string/login" />

        </LinearLayout>

        <TextView
            style="@style/Widget.TextView.Primary"
            android:layout_marginTop="201dp"
            android:text="@string/login_goToRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_login_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>